# mcpwn

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  opencode.jsonc  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/mcpwn-scan/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml
mcpwn/: __main__.py  cli.py  taxonomy.py
mcpwn/attacks/: a2a_scanner.py  injection_tester.py  prompt_fuzzer.py  rce_blind_tester.py  sqli_tester.py  ssrf_tester.py  tool_analysis.py  tool_poisoning_fuzzer.py
mcpwn/core/: findings.py  report.py
mcpwn/lab/: server.py
mcpwn/utils/: mcp_connect.py
scripts/: gen_screenshot.py
tests/: conftest.py  test_a2a_scanner.py  test_findings.py  test_prompt_fuzzer.py  test_rce_blind.py  test_sqli.py  test_ssrf.py  test_tool_analysis.py  test_tool_poisoning_fuzzer.py
