[project]
name = "mcpwn"
version = "0.1.0"
description = "Offensive security testing framework for MCP (Model Context Protocol) protocols"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.24"]

[project.scripts]
mcpwn = "mcpwn.cli:app"

[project.urls]
Homepage = "https://github.com/Carlos-Projects/mcpwn"
Repository = "https://github.com/Carlos-Projects/mcpwn"
Documentation = "https://github.com/Carlos-Projects/mcpwn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]