[project]
name = "mcpwn"
version = "0.1.0"
description = "Offensive security testing framework for MCP (Model Context Protocol) protocols"
keywords = ["mcp", "security", "pentesting", "ai-security", "red-team"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30"]

[project.scripts]
mcpwn = "mcpwn.cli:app"

[project.urls]
Homepage = "https://github.com/Carlos-Projects/mcpwn"
Repository = "https://github.com/Carlos-Projects/mcpwn"
Documentation = "https://github.com/Carlos-Projects/mcpwn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]